Apply translation changes

--- a/fr/index.html
+++ b/fr/index.html
@@ -28,7 +28,7 @@
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 
     <link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/>
-    <script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"border":"thin","colors":{"popup":{"background":"#222222","text":"#ffffff","border":"#f9f9f9"},"button":{"background":"#f9f9f9","text":"#000000"}},"content":{"href":"https://chillibits.com/colorconverter/de/privacy/#cookies","message":"This website uses cookies to ensure you get the best experience on our website.","link":"Learn more","button":"Got it!"},"position":"bottom-right","corners":"normal","transparency":"15"})});</script>
+    <script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"border":"thin","colors":{"popup":{"background":"#222222","text":"#ffffff","border":"#f9f9f9"},"button":{"background":"#f9f9f9","text":"#000000"}},"content":{"href":"https://chillibits.com/colorconverter/de/privacy/#cookies","message":"Ce site web utilise des cookies pour vous garantir la meilleure expérience sur notre site web.","link":"Apprendre encore plus","button":"Je l'ai!"},"position":"bottom-right","corners":"normal","transparency":"15"})});</script>
 </head>
 
 <body>
@@ -264,7 +264,7 @@
     <div class="features_area">
         <div class="container">
             <div class="section_title text-center  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                <h3>Spreading of the app</h3>
+                <h3>Diffusion de l'application</h3>
             </div>
             <div class="row align-items-center">
                 <img src="./img/map.svg" class="col-xl-12 col-lg-12 col-md-12 wow fadeInUp" width="100%" alt="world map"/>
@@ -272,26 +272,26 @@
             <div class="row align-items-center">
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
-                        <h1 class="stats-title" id="stats1">10,000</h1>
+                        <h1 class="stats-title" id="stats1">10 000</h1>
                         <h6>installations</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
-                        <h1 class="stats-title" id="stats1">2,100</h1>
-                        <h6>active users</h6>
+                        <h1 class="stats-title" id="stats1">2 100</h1>
+                        <h6>utilisateurs actifs</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".2s">
                         <h1 class="stats-title" id="stats2">141</h1>
-                        <h6>countries</h6>
+                        <h6>pays</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".4s">
-                        <h1 class="stats-title" id="stats3">2,200</h1>
-                        <h6>active devices</h6>
+                        <h1 class="stats-title" id="stats3">2 200</h1>
+                        <h6>appareils actifs</h6>
                     </div>
                 </div>
             </div>
