--- a/fr/index.html
+++ b/fr/index.html
@@ -273,7 +273,7 @@
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
                         <h1 class="stats-title" id="stats1">12 000</h1>
-                        <h6>installations</h6>
+                        <h6>Téléchargements</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
