--- a/src/index.html
+++ b/src/index.html
@@ -272,8 +272,8 @@
             <div class="row align-items-center">
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
-                        <h1 class="stats-title" id="stats1">str_installations_count</h1>
-                        <h6>str_installations</h6>
+                        <h1 class="stats-title" id="stats1">str_download_count</h1>
+                        <h6>str_downloads</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
