--- a/de/index.html
+++ b/de/index.html
@@ -272,25 +272,25 @@
             <div class="row align-items-center">
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
-                        <h1 class="stats-title" id="stats1">12.500</h1>
+                        <h2 class="stats-title" id="stats1">Laden ...</h2>
                         <h6>Downloads</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
-                        <h1 class="stats-title" id="stats1">2.400</h1>
+                        <h2 class="stats-title" id="stats2">Laden ...</h2>
                         <h6>aktive Nutzer</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".2s">
-                        <h1 class="stats-title" id="stats2">145</h1>
+                        <h2 class="stats-title" id="stats3">Laden ...</h2>
                         <h6>Länder</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".4s">
-                        <h1 class="stats-title" id="stats3">2.500</h1>
+                        <h2 class="stats-title" id="stats4">Laden ...</h2>
                         <h6>aktive Geräte</h6>
                     </div>
                 </div>
