--- a/src/index.html
+++ b/src/index.html
@@ -272,25 +272,25 @@
             <div class="row align-items-center">
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
-                        <h1 class="stats-title" id="stats1">str_download_count</h1>
+                        <h2 class="stats-title" id="stats1">str_loading</h2>
                         <h6>str_downloads</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s">
-                        <h1 class="stats-title" id="stats1">str_users_count</h1>
+                        <h2 class="stats-title" id="stats2">str_loading</h2>
                         <h6>str_users</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".2s">
-                        <h1 class="stats-title" id="stats2">str_countries_count</h1>
+                        <h2 class="stats-title" id="stats3">str_loading</h2>
                         <h6>str_countries</h6>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".4s">
-                        <h1 class="stats-title" id="stats3">str_devices_count</h1>
+                        <h2 class="stats-title" id="stats4">str_loading</h2>
                         <h6>str_devices</h6>
                     </div>
                 </div>
