--- a/en/index.html
+++ b/en/index.html
@@ -63,6 +63,20 @@
                         </div>
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
+                                <div class="main-menu d-none d-lg-block">
+                                    <nav>
+                                        <ul>
+                                            <li><a href="..">EN <i class="ti-angle-down"></i></a>
+                                                <ul class="submenu">
+                                                    <li><a href="../en">EN</a></li>
+                                                    <li><a href="../de">DE</a></li>
+                                                    <li><a href="../fr">FR</a></li>
+                                                    <li><a href="../es">ES</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
                                 <div class="book_btn d-none d-lg-block">
                                     <a href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Download</a>
                                 </div>
