--- a/es/index.html
+++ b/es/index.html
@@ -45,7 +45,7 @@
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
                                 <a href=".">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="img/logo.png" alt="Pmapp logo">
                                 </a>
                             </div>
                         </div>
