--- a/src/index.html
+++ b/src/index.html
@@ -284,7 +284,7 @@
     <div class="features_area">
         <div class="container">
             <div class="section_title text-center  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                <h3>str_spreading</h3>
+                <h3>str_distribution</h3>
             </div>
             <div class="row align-items-center">
                 <img src="./img/map.svg" class="col-xl-12 col-lg-12 col-md-12 wow fadeInUp" width="100%" alt="world map"/>
