--- a/src/privacy/index.html
+++ b/src/privacy/index.html
@@ -162,10 +162,6 @@
                 </p>
 
                 <p>ChilliBits<br>
-                Amalienstraße 6<br>
-                76646 Bruchsal<br>
-                Germany<br>
-                Phone: 015204079320<br>
                 Email: info@chillibits.com<br>
                 Website: www.chillibits.com</p>
 
@@ -371,7 +367,7 @@
                                     <img src="../../../src/images/icon_small.png" alt="ChilliBits Logo">
                                 </a>
                             </div>
-                            <p><a href="url_home"><b>ChilliBits</b></a><br>Amalienstraße 6<br>76646 Bruchsal<br>Germany</p>
+                            <p><a href="url_home"><b>ChilliBits</b></a><br></p>
                         </div>
                     </div>
                     <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-2">
